[workspace]
resolver = "2"
members = [
    "packages/zhan-sdk",
    "packages/zhan",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["zhan-cli team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (使用 rustls 避免 OpenSSL 依赖)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Config
confy = "0.6"
dirs = "5"

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Output formatting
owo-colors = "3"
indicatif = "0.17"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
